--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -4,6 +4,25 @@
   flex-direction: column;
   height: 350px;
   align-items: center;
+  position: relative;
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+
+    .app-button {
+      opacity: 0.85;
+      display: flex;
+    }
+  }
+  .app-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 255px;
+    display: none;
+  }
 
   .image {
     width: 100%;
